[gd_scene load_steps=2 format=3 uid="uid://bc26222ggmjg2"]

[ext_resource type="Script" uid="uid://de0ted024ihsp" path="res://scripts/DifficultyMenu.gd" id="1_kvrs8"]

[node name="DifficultyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kvrs8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4306268, 0.40688094, 0.7668044, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Título" type="Label" parent="CenterContainer/ButtonContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.28627452, 0.7882353, 0.43137255, 1)
theme_override_colors/font_shadow_color = Color(0.3665929, 2.1874938, 2.2962046, 0.14509805)
theme_override_colors/font_outline_color = Color(0, 0.7372549, 0, 1)
theme_override_constants/line_spacing = 12
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 9
theme_override_font_sizes/font_size = 35
text = "SELECIONE A DIFICULDADE"

[node name="EasyButton" type="Button" parent="CenterContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "FÁCIL"

[node name="NormalButton" type="Button" parent="CenterContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "NORMAL"

[node name="HardButton" type="Button" parent="CenterContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "DIFÍCIL"

[node name="InsaneButton" type="Button" parent="CenterContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "INSANO"

[node name="BackButton" type="Button" parent="CenterContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "VOLTAR"
